// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render single expense summary 1`] = `
<div>
  <h1>
    Viewing 
    1
     
    expense
     totaling 
    $1,495.00
     
  </h1>
</div>
`;

exports[`should render summary for multiple expenses 1`] = `
<div>
  <h1>
    Viewing 
    2
     
    expenses
     totaling 
    $3,250.00
     
  </h1>
</div>
`;
